# backend/docs/swagger.json
@@ -53,7 +53,7 @@
                 }
             }
         },
-        "/subscription": {
+        "/v1/subscription": {
             "get": {
                 "produces": [
                     "application/json"
@@ -88,7 +88,7 @@
                 }
             }
         },
-        "/subscription/{subscriptionId}": {
+        "/v1/subscription/{subscriptionId}": {
             "get": {
                 "produces": [
                     "application/json"
@@ -129,7 +129,7 @@
                 }
             }
         },
-        "/users/{userId}/subscriptions": {
+        "/v1/users/{userId}/subscriptions": {
             "get": {
                 "produces": [
                     "application/json"
@@ -221,7 +221,7 @@
                 }
             }
         },
-        "/users/{userId}/subscriptions/{userSubscriptionId}": {
+        "/v1/users/{userId}/subscriptions/{userSubscriptionId}": {
             "put": {
                 "consumes": [
                     "application/json"
